RESOLVED FIXED118514
DumpRenderTree should stop sending unsupported URLs to NSWorkspace
https://bugs.webkit.org/show_bug.cgi?id=118514
Summary DumpRenderTree should stop sending unsupported URLs to NSWorkspace
Anders Carlsson
Reported 2013-07-09 10:44:39 PDT
DumpRenderTree should stop sending unsupported URLs to NSWorkspace
Attachments
Patch (11.87 KB, patch)
2013-07-09 10:47 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-07-09 10:47:36 PDT
Anders Carlsson
Comment 2 2013-07-09 10:49:02 PDT
Note You need to log in before you can comment on or make changes to this bug.